fix: issue #23, spacing, had to duplicate plugin and edit.

--- a/src/page/_about.scss
+++ b/src/page/_about.scss
@@ -37,7 +37,7 @@
 	}
 
 	.team-row {
-		padding: 0 $gutter*2;
+		padding: $gutter*5 $gutter*2 0;
 		display: block;
 
 		.su-column {
@@ -64,13 +64,17 @@
 		}
 
 		.katb_meta_top {
-			padding: $gutter*4 $gutter;
 			position: relative;
 
 			@include breakpoint(md) {
 				width: 50%;
 				position: absolute;
 				left: 50%;
+				margin-top: $gutter*3;
+			}
+
+			@include breakpoint(lg) {
+				left: 45%;
 			}
 		}
 
@@ -81,10 +85,9 @@
 
 		.katb_author {
 			width: 100%;
-			position: absolute;
-			bottom: 0;
 			font-size: 18px;
 			text-align: center;
+			line-height: 24px;
 
 			&:before {
 				content: '- ';
@@ -96,7 +99,9 @@
 			font-size: 28px;
 			font-weight: bold;
 			font-style: normal;
-			position: relative;
+			float: none;
+			display: block;
+			margin: 0 auto $gutter;
 
 			&:before {
 				margin-left: -18px;
